CHange logo and fix overflow Y on bookmarks

--- a/src/app/(private)/dashboard/styles.scss
+++ b/src/app/(private)/dashboard/styles.scss
@@ -30,7 +30,7 @@
       gap: 1rem;
       height: 200px;
       align-items: center;
-      padding: 2rem;
+      padding: 1rem;
 
       .not_found_message {
         width: 100%;
