--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -15,9 +15,10 @@
     .actions {
       display: flex;
       gap: 3rem;
+      align-items: center;
 
       img {
-        height: 1rem;
+        height: 2rem;
       }
     }
   }
